<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/detailsScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="2">

        <TextView
            style="@style/TaskLabelTextView"
            android:id="@+id/categoryLabelTextView"
            android:text="@string/label_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            style="@style/TaskTextView"
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            style="@style/TaskLabelTextView"
            android:id="@+id/resumeLabelTextView"
            android:text="@string/label_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            style="@style/TaskTextView"
            android:id="@+id/resumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1" />
        <TextView
            style="@style/TaskLabelTextView"
            android:id="@+id/descriptionLabelTextView"
            android:text="@string/label_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            style="@style/TaskTextView"
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            style="@style/TaskLabelTextView"
            android:id="@+id/dateLabelTextView"
            android:text="@string/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            style="@style/TaskTextView"
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1" />

    </GridLayout>
</ScrollView>
